--- a/app/src/main/res/layout/fragment_add_cargo.xml
+++ b/app/src/main/res/layout/fragment_add_cargo.xml
@@ -94,6 +94,7 @@
             android:layout_marginTop="50dp"
             android:hint="Loading Date"
             android:textSize="20sp"
+            android:inputType="date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/truckType" />
@@ -150,8 +151,8 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="88dp"
             android:text="Select truck type"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
